--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,9 +23,11 @@ pipelines:
     master:
       - step:
           name: Lint and Build
+          image: node:18
           caches:
             - node
           script:
             - npm ci
             - npm list eslint eslint-config-airbnb-base
             - npm run lint
+            - npm test
